# citk-guest-house

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: migrations.yml  pylint.yml
guest-house-frontend/: README.md  api.js  package-lock.json  package.json
guest-house-frontend/components/LoginForm/: LoginForm.css  LoginForm.jsx
guest-house-frontend/components/RegisterForm/: RegisterForm.jsx
guest-house-frontend/components/auth/LoginForm/: LoginForm.css  LoginForm.jsx
guest-house-frontend/components/auth/RegisterForm/: RegisterForm.css  RegisterForm.jsx  registerChecks.js
guest-house-frontend/sites/dashboardpage/: dashboardpage.jsx
guest-house-frontend/sites/loginpage/: loginpage.jsx
guest-house-frontend/sites/registerpage/: registerpage.jsx
guest-house-frontend/src/app/: layout.js  page.js
guest-house-frontend/src/app/dashboard/: page.jsx
guest-house-frontend/utils/: cookies.js
guest_house/: ENDPOINTS.md  README.MD  manage.py  requirements.txt  test_example.py
guest_house/accounts/: apps.py  models.py  serializers.py  urls.py  views.py
guest_house/auth/: serializers.py  urls.py  views.py
guest_house/booking/: admin.py  apps.py  mail_utils.py  models.py  serializers.py  signals.py  urls.py  views.py
guest_house/department/: apps.py  models.py  serializers.py  urls.py  views.py
guest_house/guest_house/: asgi.py  mail_utils.py  settings.py  urls.py  wsgi.py
guest_house/guests/: apps.py  models.py  serializers.py  urls.py  views.py
guest_house/rooms/: apps.py  models.py  serializers.py  urls.py  views.py
(+14 files in other folders)
