[tool.poetry]
name = "citk-guest-house"
version = "0.1.0"
description = ""
authors = ["Abhishek Kashyap <abhik5567@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.1"
markdown = "^3.6"
django-filter = "^24.2"
django-cors-headers = "^4.3.1"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
